# rubikCube

./: CMakeLists.txt  constants.h  cube.h  rubikCube.cpp  utils.h
